ProjectTemplate/sample/part/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TRNLI
    SENLI

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> expression
Rule 3     statement -> statement expression
Rule 4     expression -> H1 factor cr
Rule 5     expression -> H2 factor cr
Rule 6     expression -> H3 factor cr
Rule 7     expression -> lines
Rule 8     expression -> block
Rule 9     expression -> code
Rule 10    expression -> expression codeline
Rule 11    expression -> expression rbrace
Rule 12    lines -> lines factor
Rule 13    lines -> lines cr
Rule 14    lines -> factor
Rule 15    block -> block bline
Rule 16    block -> bline
Rule 17    bline -> RIST lines cr
Rule 18    factor -> text
Rule 19    factor -> STAR factor STAR
Rule 20    factor -> DOUBLESTAR factor DOUBLESTAR
Rule 21    factor -> POINT factor POINT
Rule 22    text -> TEXT
Rule 23    text -> text NUMBER
Rule 24    text -> text TEXT
Rule 25    factor -> LEMI factor RIMI LESM factor RISM
Rule 26    factor -> IMG ILEMI factor IRIMI ILESM factor IRISM
Rule 27    factor -> LEST factor RIST
Rule 28    expression -> HR cr
Rule 29    expression -> ul
Rule 30    expression -> ol
Rule 31    ul -> ul li
Rule 32    ul -> li
Rule 33    seul -> seul seli
Rule 34    seul -> seli
Rule 35    li -> LI factor cr
Rule 36    li -> seul
Rule 37    seli -> SELI factor cr
Rule 38    seli -> trul
Rule 39    trul -> trul trli
Rule 40    trul -> trli
Rule 41    trli -> TRLI factor cr
Rule 42    ol -> ol nli
Rule 43    ol -> nli
Rule 44    nli -> NLI factor cr
Rule 45    nli -> seul
Rule 46    cr -> CR
Rule 47    cr -> T cr
Rule 48    cr -> cr CR

Terminals, with rules where they appear

CR                   : 46 48
DOUBLESTAR           : 20 20
H1                   : 4
H2                   : 5
H3                   : 6
HR                   : 28
ILEMI                : 26
ILESM                : 26
IMG                  : 26
IRIMI                : 26
IRISM                : 26
LEMI                 : 25
LESM                 : 25
LEST                 : 27
LI                   : 35
NLI                  : 44
NUMBER               : 23
POINT                : 21 21
RIMI                 : 25
RISM                 : 25
RIST                 : 17 27
SELI                 : 37
SENLI                : 
STAR                 : 19 19
T                    : 47
TEXT                 : 22 24
TRLI                 : 41
TRNLI                : 
code                 : 9
codeline             : 10
error                : 
rbrace               : 11

Nonterminals, with rules where they appear

bline                : 15 16
block                : 8 15
body                 : 0
cr                   : 4 5 6 13 17 28 35 37 41 44 47 48
expression           : 2 3 10 11
factor               : 4 5 6 12 14 19 20 21 25 25 26 26 27 35 37 41 44
li                   : 31 32
lines                : 7 12 13 17
nli                  : 42 43
ol                   : 30 42
seli                 : 33 34
seul                 : 33 36 45
statement            : 1 3
text                 : 18 23 24
trli                 : 39 40
trul                 : 38 39
ul                   : 29 31

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . expression
    (3) statement -> . statement expression
    (4) expression -> . H1 factor cr
    (5) expression -> . H2 factor cr
    (6) expression -> . H3 factor cr
    (7) expression -> . lines
    (8) expression -> . block
    (9) expression -> . code
    (10) expression -> . expression codeline
    (11) expression -> . expression rbrace
    (28) expression -> . HR cr
    (29) expression -> . ul
    (30) expression -> . ol
    (12) lines -> . lines factor
    (13) lines -> . lines cr
    (14) lines -> . factor
    (15) block -> . block bline
    (16) block -> . bline
    (31) ul -> . ul li
    (32) ul -> . li
    (42) ol -> . ol nli
    (43) ol -> . nli
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (17) bline -> . RIST lines cr
    (35) li -> . LI factor cr
    (36) li -> . seul
    (44) nli -> . NLI factor cr
    (45) nli -> . seul
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT
    (33) seul -> . seul seli
    (34) seul -> . seli
    (37) seli -> . SELI factor cr
    (38) seli -> . trul
    (39) trul -> . trul trli
    (40) trul -> . trli
    (41) trli -> . TRLI factor cr

    H1              shift and go to state 28
    H2              shift and go to state 26
    H3              shift and go to state 27
    code            shift and go to state 3
    HR              shift and go to state 6
    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    RIST            shift and go to state 22
    LI              shift and go to state 11
    NLI             shift and go to state 18
    TEXT            shift and go to state 21
    SELI            shift and go to state 25
    TRLI            shift and go to state 12

    body                           shift and go to state 19
    bline                          shift and go to state 2
    ol                             shift and go to state 24
    seli                           shift and go to state 13
    text                           shift and go to state 7
    seul                           shift and go to state 8
    lines                          shift and go to state 29
    li                             shift and go to state 15
    ul                             shift and go to state 30
    trul                           shift and go to state 33
    statement                      shift and go to state 16
    factor                         shift and go to state 17
    nli                            shift and go to state 10
    expression                     shift and go to state 31
    block                          shift and go to state 32
    trli                           shift and go to state 23

state 1

    (27) factor -> LEST . factor RIST
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 34

state 2

    (16) block -> bline .

    RIST            reduce using rule 16 (block -> bline .)
    codeline        reduce using rule 16 (block -> bline .)
    rbrace          reduce using rule 16 (block -> bline .)
    H1              reduce using rule 16 (block -> bline .)
    H2              reduce using rule 16 (block -> bline .)
    H3              reduce using rule 16 (block -> bline .)
    code            reduce using rule 16 (block -> bline .)
    HR              reduce using rule 16 (block -> bline .)
    STAR            reduce using rule 16 (block -> bline .)
    DOUBLESTAR      reduce using rule 16 (block -> bline .)
    POINT           reduce using rule 16 (block -> bline .)
    LEMI            reduce using rule 16 (block -> bline .)
    IMG             reduce using rule 16 (block -> bline .)
    LEST            reduce using rule 16 (block -> bline .)
    LI              reduce using rule 16 (block -> bline .)
    NLI             reduce using rule 16 (block -> bline .)
    TEXT            reduce using rule 16 (block -> bline .)
    SELI            reduce using rule 16 (block -> bline .)
    TRLI            reduce using rule 16 (block -> bline .)
    $end            reduce using rule 16 (block -> bline .)


state 3

    (9) expression -> code .

    codeline        reduce using rule 9 (expression -> code .)
    rbrace          reduce using rule 9 (expression -> code .)
    H1              reduce using rule 9 (expression -> code .)
    H2              reduce using rule 9 (expression -> code .)
    H3              reduce using rule 9 (expression -> code .)
    code            reduce using rule 9 (expression -> code .)
    HR              reduce using rule 9 (expression -> code .)
    STAR            reduce using rule 9 (expression -> code .)
    DOUBLESTAR      reduce using rule 9 (expression -> code .)
    POINT           reduce using rule 9 (expression -> code .)
    LEMI            reduce using rule 9 (expression -> code .)
    IMG             reduce using rule 9 (expression -> code .)
    LEST            reduce using rule 9 (expression -> code .)
    RIST            reduce using rule 9 (expression -> code .)
    LI              reduce using rule 9 (expression -> code .)
    NLI             reduce using rule 9 (expression -> code .)
    TEXT            reduce using rule 9 (expression -> code .)
    SELI            reduce using rule 9 (expression -> code .)
    TRLI            reduce using rule 9 (expression -> code .)
    $end            reduce using rule 9 (expression -> code .)


state 4

    (19) factor -> STAR . factor STAR
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 35

state 5

    (25) factor -> LEMI . factor RIMI LESM factor RISM
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 36

state 6

    (28) expression -> HR . cr
    (46) cr -> . CR
    (47) cr -> . T cr
    (48) cr -> . cr CR

    CR              shift and go to state 39
    T               shift and go to state 38

    cr                             shift and go to state 37

state 7

    (18) factor -> text .
    (23) text -> text . NUMBER
    (24) text -> text . TEXT

  ! shift/reduce conflict for TEXT resolved as shift
    CR              reduce using rule 18 (factor -> text .)
    T               reduce using rule 18 (factor -> text .)
    STAR            reduce using rule 18 (factor -> text .)
    DOUBLESTAR      reduce using rule 18 (factor -> text .)
    POINT           reduce using rule 18 (factor -> text .)
    LEMI            reduce using rule 18 (factor -> text .)
    IMG             reduce using rule 18 (factor -> text .)
    LEST            reduce using rule 18 (factor -> text .)
    codeline        reduce using rule 18 (factor -> text .)
    rbrace          reduce using rule 18 (factor -> text .)
    H1              reduce using rule 18 (factor -> text .)
    H2              reduce using rule 18 (factor -> text .)
    H3              reduce using rule 18 (factor -> text .)
    code            reduce using rule 18 (factor -> text .)
    HR              reduce using rule 18 (factor -> text .)
    RIST            reduce using rule 18 (factor -> text .)
    LI              reduce using rule 18 (factor -> text .)
    NLI             reduce using rule 18 (factor -> text .)
    SELI            reduce using rule 18 (factor -> text .)
    TRLI            reduce using rule 18 (factor -> text .)
    $end            reduce using rule 18 (factor -> text .)
    RISM            reduce using rule 18 (factor -> text .)
    IRIMI           reduce using rule 18 (factor -> text .)
    RIMI            reduce using rule 18 (factor -> text .)
    IRISM           reduce using rule 18 (factor -> text .)
    NUMBER          shift and go to state 40
    TEXT            shift and go to state 41

  ! TEXT            [ reduce using rule 18 (factor -> text .) ]


state 8

    (36) li -> seul .
    (45) nli -> seul .
    (33) seul -> seul . seli
    (37) seli -> . SELI factor cr
    (38) seli -> . trul
    (39) trul -> . trul trli
    (40) trul -> . trli
    (41) trli -> . TRLI factor cr

  ! reduce/reduce conflict for NLI resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for SELI resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for TRLI resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for codeline resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for rbrace resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for H1 resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for H2 resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for H3 resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for code resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for HR resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for STAR resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for DOUBLESTAR resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for POINT resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for LEMI resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for IMG resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for LEST resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for RIST resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for LI resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for TEXT resolved using rule 36 (li -> seul .)
  ! reduce/reduce conflict for $end resolved using rule 36 (li -> seul .)
  ! shift/reduce conflict for SELI resolved as shift
  ! shift/reduce conflict for TRLI resolved as shift
    LI              reduce using rule 36 (li -> seul .)
    codeline        reduce using rule 36 (li -> seul .)
    rbrace          reduce using rule 36 (li -> seul .)
    H1              reduce using rule 36 (li -> seul .)
    H2              reduce using rule 36 (li -> seul .)
    H3              reduce using rule 36 (li -> seul .)
    code            reduce using rule 36 (li -> seul .)
    HR              reduce using rule 36 (li -> seul .)
    STAR            reduce using rule 36 (li -> seul .)
    DOUBLESTAR      reduce using rule 36 (li -> seul .)
    POINT           reduce using rule 36 (li -> seul .)
    LEMI            reduce using rule 36 (li -> seul .)
    IMG             reduce using rule 36 (li -> seul .)
    LEST            reduce using rule 36 (li -> seul .)
    RIST            reduce using rule 36 (li -> seul .)
    NLI             reduce using rule 36 (li -> seul .)
    TEXT            reduce using rule 36 (li -> seul .)
    $end            reduce using rule 36 (li -> seul .)
    SELI            shift and go to state 25
    TRLI            shift and go to state 12

  ! SELI            [ reduce using rule 36 (li -> seul .) ]
  ! TRLI            [ reduce using rule 36 (li -> seul .) ]
  ! NLI             [ reduce using rule 45 (nli -> seul .) ]
  ! SELI            [ reduce using rule 45 (nli -> seul .) ]
  ! TRLI            [ reduce using rule 45 (nli -> seul .) ]
  ! codeline        [ reduce using rule 45 (nli -> seul .) ]
  ! rbrace          [ reduce using rule 45 (nli -> seul .) ]
  ! H1              [ reduce using rule 45 (nli -> seul .) ]
  ! H2              [ reduce using rule 45 (nli -> seul .) ]
  ! H3              [ reduce using rule 45 (nli -> seul .) ]
  ! code            [ reduce using rule 45 (nli -> seul .) ]
  ! HR              [ reduce using rule 45 (nli -> seul .) ]
  ! STAR            [ reduce using rule 45 (nli -> seul .) ]
  ! DOUBLESTAR      [ reduce using rule 45 (nli -> seul .) ]
  ! POINT           [ reduce using rule 45 (nli -> seul .) ]
  ! LEMI            [ reduce using rule 45 (nli -> seul .) ]
  ! IMG             [ reduce using rule 45 (nli -> seul .) ]
  ! LEST            [ reduce using rule 45 (nli -> seul .) ]
  ! RIST            [ reduce using rule 45 (nli -> seul .) ]
  ! LI              [ reduce using rule 45 (nli -> seul .) ]
  ! TEXT            [ reduce using rule 45 (nli -> seul .) ]
  ! $end            [ reduce using rule 45 (nli -> seul .) ]

    seli                           shift and go to state 42
    trul                           shift and go to state 33
    trli                           shift and go to state 23

state 9

    (20) factor -> DOUBLESTAR . factor DOUBLESTAR
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 43

state 10

    (43) ol -> nli .

    NLI             reduce using rule 43 (ol -> nli .)
    SELI            reduce using rule 43 (ol -> nli .)
    TRLI            reduce using rule 43 (ol -> nli .)
    codeline        reduce using rule 43 (ol -> nli .)
    rbrace          reduce using rule 43 (ol -> nli .)
    H1              reduce using rule 43 (ol -> nli .)
    H2              reduce using rule 43 (ol -> nli .)
    H3              reduce using rule 43 (ol -> nli .)
    code            reduce using rule 43 (ol -> nli .)
    HR              reduce using rule 43 (ol -> nli .)
    STAR            reduce using rule 43 (ol -> nli .)
    DOUBLESTAR      reduce using rule 43 (ol -> nli .)
    POINT           reduce using rule 43 (ol -> nli .)
    LEMI            reduce using rule 43 (ol -> nli .)
    IMG             reduce using rule 43 (ol -> nli .)
    LEST            reduce using rule 43 (ol -> nli .)
    RIST            reduce using rule 43 (ol -> nli .)
    LI              reduce using rule 43 (ol -> nli .)
    TEXT            reduce using rule 43 (ol -> nli .)
    $end            reduce using rule 43 (ol -> nli .)


state 11

    (35) li -> LI . factor cr
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 44

state 12

    (41) trli -> TRLI . factor cr
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 45

state 13

    (34) seul -> seli .

    SELI            reduce using rule 34 (seul -> seli .)
    TRLI            reduce using rule 34 (seul -> seli .)
    NLI             reduce using rule 34 (seul -> seli .)
    codeline        reduce using rule 34 (seul -> seli .)
    rbrace          reduce using rule 34 (seul -> seli .)
    H1              reduce using rule 34 (seul -> seli .)
    H2              reduce using rule 34 (seul -> seli .)
    H3              reduce using rule 34 (seul -> seli .)
    code            reduce using rule 34 (seul -> seli .)
    HR              reduce using rule 34 (seul -> seli .)
    STAR            reduce using rule 34 (seul -> seli .)
    DOUBLESTAR      reduce using rule 34 (seul -> seli .)
    POINT           reduce using rule 34 (seul -> seli .)
    LEMI            reduce using rule 34 (seul -> seli .)
    IMG             reduce using rule 34 (seul -> seli .)
    LEST            reduce using rule 34 (seul -> seli .)
    RIST            reduce using rule 34 (seul -> seli .)
    LI              reduce using rule 34 (seul -> seli .)
    TEXT            reduce using rule 34 (seul -> seli .)
    $end            reduce using rule 34 (seul -> seli .)


state 14

    (21) factor -> POINT . factor POINT
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 46

state 15

    (32) ul -> li .

    LI              reduce using rule 32 (ul -> li .)
    SELI            reduce using rule 32 (ul -> li .)
    TRLI            reduce using rule 32 (ul -> li .)
    codeline        reduce using rule 32 (ul -> li .)
    rbrace          reduce using rule 32 (ul -> li .)
    H1              reduce using rule 32 (ul -> li .)
    H2              reduce using rule 32 (ul -> li .)
    H3              reduce using rule 32 (ul -> li .)
    code            reduce using rule 32 (ul -> li .)
    HR              reduce using rule 32 (ul -> li .)
    STAR            reduce using rule 32 (ul -> li .)
    DOUBLESTAR      reduce using rule 32 (ul -> li .)
    POINT           reduce using rule 32 (ul -> li .)
    LEMI            reduce using rule 32 (ul -> li .)
    IMG             reduce using rule 32 (ul -> li .)
    LEST            reduce using rule 32 (ul -> li .)
    RIST            reduce using rule 32 (ul -> li .)
    NLI             reduce using rule 32 (ul -> li .)
    TEXT            reduce using rule 32 (ul -> li .)
    $end            reduce using rule 32 (ul -> li .)


state 16

    (1) body -> statement .
    (3) statement -> statement . expression
    (4) expression -> . H1 factor cr
    (5) expression -> . H2 factor cr
    (6) expression -> . H3 factor cr
    (7) expression -> . lines
    (8) expression -> . block
    (9) expression -> . code
    (10) expression -> . expression codeline
    (11) expression -> . expression rbrace
    (28) expression -> . HR cr
    (29) expression -> . ul
    (30) expression -> . ol
    (12) lines -> . lines factor
    (13) lines -> . lines cr
    (14) lines -> . factor
    (15) block -> . block bline
    (16) block -> . bline
    (31) ul -> . ul li
    (32) ul -> . li
    (42) ol -> . ol nli
    (43) ol -> . nli
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (17) bline -> . RIST lines cr
    (35) li -> . LI factor cr
    (36) li -> . seul
    (44) nli -> . NLI factor cr
    (45) nli -> . seul
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT
    (33) seul -> . seul seli
    (34) seul -> . seli
    (37) seli -> . SELI factor cr
    (38) seli -> . trul
    (39) trul -> . trul trli
    (40) trul -> . trli
    (41) trli -> . TRLI factor cr

    $end            reduce using rule 1 (body -> statement .)
    H1              shift and go to state 28
    H2              shift and go to state 26
    H3              shift and go to state 27
    code            shift and go to state 3
    HR              shift and go to state 6
    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    RIST            shift and go to state 22
    LI              shift and go to state 11
    NLI             shift and go to state 18
    TEXT            shift and go to state 21
    SELI            shift and go to state 25
    TRLI            shift and go to state 12

    bline                          shift and go to state 2
    ol                             shift and go to state 24
    seli                           shift and go to state 13
    text                           shift and go to state 7
    seul                           shift and go to state 8
    lines                          shift and go to state 29
    li                             shift and go to state 15
    ul                             shift and go to state 30
    trul                           shift and go to state 33
    factor                         shift and go to state 17
    nli                            shift and go to state 10
    expression                     shift and go to state 47
    block                          shift and go to state 32
    trli                           shift and go to state 23

state 17

    (14) lines -> factor .

    STAR            reduce using rule 14 (lines -> factor .)
    DOUBLESTAR      reduce using rule 14 (lines -> factor .)
    POINT           reduce using rule 14 (lines -> factor .)
    LEMI            reduce using rule 14 (lines -> factor .)
    IMG             reduce using rule 14 (lines -> factor .)
    LEST            reduce using rule 14 (lines -> factor .)
    CR              reduce using rule 14 (lines -> factor .)
    T               reduce using rule 14 (lines -> factor .)
    TEXT            reduce using rule 14 (lines -> factor .)
    codeline        reduce using rule 14 (lines -> factor .)
    rbrace          reduce using rule 14 (lines -> factor .)
    H1              reduce using rule 14 (lines -> factor .)
    H2              reduce using rule 14 (lines -> factor .)
    H3              reduce using rule 14 (lines -> factor .)
    code            reduce using rule 14 (lines -> factor .)
    HR              reduce using rule 14 (lines -> factor .)
    RIST            reduce using rule 14 (lines -> factor .)
    LI              reduce using rule 14 (lines -> factor .)
    NLI             reduce using rule 14 (lines -> factor .)
    SELI            reduce using rule 14 (lines -> factor .)
    TRLI            reduce using rule 14 (lines -> factor .)
    $end            reduce using rule 14 (lines -> factor .)


state 18

    (44) nli -> NLI . factor cr
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    factor                         shift and go to state 48

state 19

    (0) S' -> body .



state 20

    (26) factor -> IMG . ILEMI factor IRIMI ILESM factor IRISM

    ILEMI           shift and go to state 49


state 21

    (22) text -> TEXT .

    NUMBER          reduce using rule 22 (text -> TEXT .)
    TEXT            reduce using rule 22 (text -> TEXT .)
    STAR            reduce using rule 22 (text -> TEXT .)
    DOUBLESTAR      reduce using rule 22 (text -> TEXT .)
    POINT           reduce using rule 22 (text -> TEXT .)
    LEMI            reduce using rule 22 (text -> TEXT .)
    IMG             reduce using rule 22 (text -> TEXT .)
    LEST            reduce using rule 22 (text -> TEXT .)
    CR              reduce using rule 22 (text -> TEXT .)
    T               reduce using rule 22 (text -> TEXT .)
    codeline        reduce using rule 22 (text -> TEXT .)
    rbrace          reduce using rule 22 (text -> TEXT .)
    H1              reduce using rule 22 (text -> TEXT .)
    H2              reduce using rule 22 (text -> TEXT .)
    H3              reduce using rule 22 (text -> TEXT .)
    code            reduce using rule 22 (text -> TEXT .)
    HR              reduce using rule 22 (text -> TEXT .)
    RIST            reduce using rule 22 (text -> TEXT .)
    LI              reduce using rule 22 (text -> TEXT .)
    NLI             reduce using rule 22 (text -> TEXT .)
    SELI            reduce using rule 22 (text -> TEXT .)
    TRLI            reduce using rule 22 (text -> TEXT .)
    $end            reduce using rule 22 (text -> TEXT .)
    RISM            reduce using rule 22 (text -> TEXT .)
    IRISM           reduce using rule 22 (text -> TEXT .)
    IRIMI           reduce using rule 22 (text -> TEXT .)
    RIMI            reduce using rule 22 (text -> TEXT .)


state 22

    (17) bline -> RIST . lines cr
    (12) lines -> . lines factor
    (13) lines -> . lines cr
    (14) lines -> . factor
    (18) factor -> . text
    (19) factor -> . STAR factor STAR
    (20) factor -> . DOUBLESTAR factor DOUBLESTAR
    (21) factor -> . POINT factor POINT
    (25) factor -> . LEMI factor RIMI LESM factor RISM
    (26) factor -> . IMG ILEMI factor IRIMI ILESM factor IRISM
    (27) factor -> . LEST factor RIST
    (22) text -> . TEXT
    (23) text -> . text NUMBER
    (24) text -> . text TEXT

    STAR            shift and go to state 4
    DOUBLESTAR      shift and go to state 9
    POINT           shift and go to state 14
    LEMI            shift and go to state 5
    IMG             shift and go to state 20
    LEST            shift and go to state 1
    TEXT            shift and go to state 21

    text                           shift and go to state 7
    lines                          shift and go to state 50
    factor                         shift and go to state 17

state 23

    (40) trul -> trli .

    TRLI            reduce using rule 40 (trul -> trli .)
    SELI            reduce using rule 40 (trul -> trli .)
    LI              reduce using rule 40 (trul -> trli .)
    codeline        reduce using rule 40 (trul -> trli .)
    rbrace          reduce using rule 40 (trul -> trli .)
    H1              reduce using rule 40 (trul -> trli .)
    H2              reduce using rule 40 (trul -> trli .)
    H3              reduce using rule 40 (trul -> trli .)
    code            reduce using rule 40 (trul -> trli .)
    HR              reduce using rule 40 (trul -> trli .)
    STAR            reduce using rule 40 (trul -> trli .)
    DOUBLESTAR      reduce using rule 40 (trul -> trli .)
    POINT           reduce using rule 40 (trul -> trli .)
    LEMI            reduce using rule 40 (trul -> trli .)
    IMG             reduce using rule 40 (trul -> trli .)
    LEST            reduce using rule 40 (trul -> trli .)
    RIST            reduce using rule 40 (trul -> trli .)
    NLI             reduce using rule 40 (trul -> trli .)
    TEXT            reduce using rule 40 (trul -> trli .)
    $end            reduce using rule 40 (trul -> trli .)


state 24

    (30) expression -> ol .
    (42) ol -> ol . nli
    (44) nli -> . NLI factor cr
    (45) nli -> . seul
    (33) seul -> . seul seli
    (34) seul -> . seli
    (37) seli -> . SELI factor cr
    (38) seli -> . trul
    (39) trul -> . trul trli
    (40) trul -> . trli
    (41) trli -> . TRLI factor cr

  ! shift/reduce conflict for NLI resolved as shift
  ! shift/reduce conflict for SELI resolved as shift
  ! shift/reduce conflict for TRLI resolved as shift
    codeline        reduce using rule 30 (expression -> ol .)
    rbrace          reduce using rule 30 (expression -> ol .)
    H1              reduce using rule 30 (expression -> ol .)
    H2              reduce using rule 30 (expression -> ol .)
    H3              reduce using rule 30 (expression -> ol .)
    code            reduce using rule 30 (expression -> ol .)
    HR              reduce using rule 30 (expression -> ol .)
    STAR            reduce using rule 30 (expression -> ol .)
    DOUBLESTAR      reduce using rule 30 (expression -> ol .)
    POINT           reduce using rule 30 (expression -> ol .)
    LEMI            reduce using rule 30 (expression -> ol .)
    IMG             reduce using rule 30 (expression -> ol .)
    LEST            reduce using rule 30 (expression -> ol .)
    RIST            reduce using rule 30 (expression -> ol .)
    LI              reduce using rule 30 (expression -> ol .)
    TEXT            reduce using rule 30 (expression -> ol .)
    $end            reduce using rule 30 (expression -> ol .)
    NLI             shift and go to state 18
    SELI            shift and go to state 25
    TRLI            shift and go to state 12

  ! NLI             [ reduce using rule 30 (expression -> ol .) ]
  ! SELI            [ reduce using rule 30 (expression -> ol .) ]
  ! TRLI            [ reduce using rule 30 (expression -> ol .) ]

    seli                           shift and go to state 13
    seul                           shift and go to state 51
    trul                           shift and go to state 33
    nli                            shift and go to state 52
    trli                           shift and go to state 23

state 25
